# homelab-dns-tracer

./: .pre-commit-config.yaml  LICENSE  README.md  config.yaml  dns-tracer.py  dns-tracer.service  pyproject.toml  requirements.txt
