[project]
name = "homelab-dns-exporter"
version = "0.1.0"
description = "A simple DNS latency exporter designed for homelab DNS chains."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dnspython>=2.7.0",
    "prometheus-client>=0.22.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
]
